tests/invalid_inputs/test03.bex
var x = new SharedArrayBuffer();

Thread t1 {
  x-F32[0] = 1;
}

Thread t2 {
  print(Atomics.load(x-F32, 0));
}
